# Seal

./: .gitignore  CLAUDE.md  DESIGN.md  Makefile  PLAN.md  PRODUCT.md  README.md  calibration.json  config.py  dev.bat  main.py  package-lock.json  package.json  pnpm-lock.yaml  start.bat
apps/backend/: .env.sample  alembic.ini  config.py  hiwonder_server.py  main.py  package.json  pyproject.toml  reset_db.py  run.py  start.bat  test_voice_dify.py
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 0001_initial_schema.py  0002_user_email_field.py  0003_leave_ai_comment.py
apps/backend/api/: auth.py  calibration.py  cameras.py  chat.py  deps.py  images.py  leave_applications.py  logs.py  main.py  review.py  stamp.py  stats.py  templates.py  users.py  voice.py
apps/backend/database/: audit.py  connection.py  models.py  review_queue.py  seed.py  template.py
apps/backend/hardware/: base.py  kinematics.py  stamp.py  wearm.py
apps/backend/integration/: dms_client.py
apps/backend/public/: index.html
apps/backend/public/assets/: index-B2_m1KUe.js  index-B58tXrzA.js  index-B6X8ntfE.js  index-BKtJ0r_q.css  index-BTQKgW4_.css  index-Be68pha_.js  index-Btwb529k.js  index-Cr9I0eZ5.js  index-Dvc1bZVt.js
apps/backend/services/: notify.py
apps/backend/utils/: dify_client.py  qr_sign.py
apps/backend/validator/: id_checker.py  leave_validator.py  rules.py
apps/backend/validator_real/: leave_validator.py
apps/backend/vision/: camera.py  classifier.py  comparator.py  example_generator.py  leave_extractor.py  ocr.py  page_counter.py  qr_scanner.py
(+123 files in other folders)
