[project]
name = "mec202"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "itsdangerous>=2.2.0",
    "opencv-python>=4.13.0.92",
    "paddleocr<3",
    "paddlepaddle<3",
    "pillow>=12.2.0",
    "pyserial>=3.5",
    "python-multipart>=0.0.27",
    "pyzbar>=0.1.9",
    "requests>=2.33.1",
    "scikit-image>=0.26.0",
    "uvicorn>=0.46.0",
    "werkzeug>=3.1.8",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "cryptography>=42.0",
    "alembic>=1.13",
    "setuptools>=82.0.1",
    "qrcode>=8.2",
    "reportlab>=4.5.0",
    "openai>=2.36.0",
    "python-dotenv>=1.0",
]
